Make ModDiscoverer static, further FML cleanup